syntax = "proto3";

package astro_run_remote_runner;

import "astro_run.proto";

message Event {
  string event_name = 1;
  oneof payload {
    astro_run.RunWorkflowEvent run_workflow_event = 2;
    astro_run.RunJobEvent run_job_event = 3;
    astro_run.RunStepEvent run_step_event = 4;
    astro_run.WorkflowRunResult workflow_completed_event = 5;
    astro_run.JobRunResult job_completed_event = 6;
    astro_run.StepRunResult step_completed_event = 7;
    astro_run.WorkflowStateEvent workflow_state_event = 8;
    astro_run.WorkflowLog log_event = 9;
    astro_run.Signal signal_event = 10;
  }
}

message RunResponse {
  string id = 1;
  oneof payload {
    astro_run.RunResult result = 2;
    astro_run.WorkflowLog log = 3;
  }
}

message SendEventResponse {}

message ConnectRequest {}

service AstroRunRemoteRunner {
  rpc GetRunnerMetadata(ConnectRequest) returns (astro_run.RunnerMetadata) {}
  rpc Run(astro_run.Context) returns (stream RunResponse) {}
  rpc SendEvent(Event) returns (SendEventResponse) {}
  rpc CallBeforeRunStepHook(astro_run.Command) returns (astro_run.Command) {}
}
